fixed issue with effects on div boxes, removed kbd tags

--- a/index.html
+++ b/index.html
@@ -9,43 +9,43 @@
 <body>
   <div class="keyBoxes">
     <div data-key="KeyA" class="key sound" data-sound="sounds/clap.wav">
-      <kbd>A</kbd>
+      A
       <br>
       <br>
       clap
     </div>
     <div data-key="KeyS" class="key sound"data-sound="sounds/hihat.wav">
-      <kbd>S</kbd>
+      S
       <br>
       <br>
-      hihat
+      hi-hat
     </div>
     <div data-key="KeyD" class="key sound" data-sound="sounds/kick.wav">
-      <kbd>D</kbd>
+      D
       <br><br>kick
     </div>
     <div data-key="KeyF" class="key sound" data-sound="sounds/openhat.wav">
-      <kbd>F</kbd>
+      F
       <br><br>open hat
     </div>
     <div data-key="KeyG" class="key sound" data-sound="sounds/boom.wav">
-      <kbd>G</kbd>
+      G
       <br><br>boom
     </div>
     <div data-key="KeyH" class="key sound" data-sound="sounds/ride.wav">
-      <kbd>H</kbd>
+      H
       <br><br>ride
     </div>
     <div data-key="KeyJ" class="key sound" data-sound="sounds/snare.wav">
-      <kbd>J</kbd>
+      J
       <br><br>snare
     </div>
     <div data-key="KeyK" class="key sound" data-sound="sounds/tom.wav">
-      <kbd>K</kbd>
+      K
       <br><br>tom
     </div>
     <div data-key="KeyL" class="key sound" data-sound="sounds/tink.wav">
-      <kbd>L</kbd>
+      L
       <br><br>tink
     </div>
   </div>
